# ConvolutionKernel

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
tests/: CMakeLists.txt  convolution_kernel_test.cc
